// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. video label with a title 1`] = `
<style>
.S1 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  -ms-flex-direction: column;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  flex-direction: column;
  margin-bottom: 0px;
  margin-left: 0px;
  padding-bottom: 3px;
  position: relative;
}

.S2 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 1.2px;
  line-height: 12px;
  margin-bottom: 0px;
  margin-left: 5px;
  padding-bottom: 0px;
}

.S3 {
  -ms-flex-align: start;
  -webkit-align-items: flex-start;
  -webkit-box-align: start;
  align-items: flex-start;
  -ms-flex-direction: row;
  -webkit-box-direction: normal;
  -webkit-box-orient: horizontal;
  -webkit-flex-direction: row;
  flex-direction: row;
  margin-left: 0px;
  margin-bottom: 1px;
  padding-bottom: 0px;
  position: relative;
}

.IS1 {
  padding-bottom: 3;
}

.IS2 {
  color: rgba(0,131,71,1.00);
}

.IS3 {
  font-family: GillSansMTStd-Medium;
  font-size: 12;
  line-height: 12;
  flex: 1;
  font-weight: 400;
  letter-spacing: 1.2;
  margin-left: 5px;
  padding-top: 1;
  color: #008347;
}

.IS4 {
  align-items: flex-start;
  flex-direction: row;
  margin-top: -1;
  margin-bottom: 1;
}
</style>

<VideoLabel
  color="#008347"
  title="swimming"
>
  <div
    className="S3"
  >
    <div
      className="S1"
    >
      <IconVideo
        fillColour="#008347"
        height={9}
      />
    </div>
    <div
      className="IS2 S2"
    >
      SWIMMING
    </div>
  </div>
</VideoLabel>
`;

exports[`2. video label without a title shows video 1`] = `
<style>
.S1 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  -ms-flex-direction: column;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  flex-direction: column;
  margin-bottom: 0px;
  margin-left: 0px;
  padding-bottom: 3px;
  position: relative;
}

.S2 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 1.2px;
  line-height: 12px;
  margin-bottom: 0px;
  margin-left: 5px;
  padding-bottom: 0px;
}

.S3 {
  -ms-flex-align: start;
  -webkit-align-items: flex-start;
  -webkit-box-align: start;
  align-items: flex-start;
  -ms-flex-direction: row;
  -webkit-box-direction: normal;
  -webkit-box-orient: horizontal;
  -webkit-flex-direction: row;
  flex-direction: row;
  margin-left: 0px;
  margin-bottom: 1px;
  padding-bottom: 0px;
  position: relative;
}

.IS1 {
  padding-bottom: 3;
}

.IS2 {
  color: rgba(0,131,71,1.00);
}

.IS3 {
  font-family: GillSansMTStd-Medium;
  font-size: 12;
  line-height: 12;
  flex: 1;
  font-weight: 400;
  letter-spacing: 1.2;
  margin-left: 5px;
  padding-top: 1;
  color: #008347;
}

.IS4 {
  align-items: flex-start;
  flex-direction: row;
  margin-top: -1;
  margin-bottom: 1;
}
</style>

<VideoLabel
  color="#008347"
  title=""
>
  <div
    className="S3"
  >
    <div
      className="S1"
    >
      <IconVideo
        fillColour="#008347"
        height={9}
      />
    </div>
    <div
      className="IS2 S2"
    >
      VIDEO
    </div>
  </div>
</VideoLabel>
`;

exports[`3. video label with the black default colour 1`] = `
<style>
.S1 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  -ms-flex-direction: column;
  -webkit-box-direction: normal;
  -webkit-box-orient: vertical;
  -webkit-flex-direction: column;
  flex-direction: column;
  margin-bottom: 0px;
  margin-left: 0px;
  padding-bottom: 3px;
  position: relative;
}

.S2 {
  font-family: GillSansMTStd-Medium;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 1.2px;
  line-height: 12px;
  margin-bottom: 0px;
  margin-left: 5px;
  padding-bottom: 0px;
}

.S3 {
  -ms-flex-align: start;
  -webkit-align-items: flex-start;
  -webkit-box-align: start;
  align-items: flex-start;
  -ms-flex-direction: row;
  -webkit-box-direction: normal;
  -webkit-box-orient: horizontal;
  -webkit-flex-direction: row;
  flex-direction: row;
  margin-left: 0px;
  margin-bottom: 1px;
  padding-bottom: 0px;
  position: relative;
}

.IS1 {
  padding-bottom: 3;
}

.IS2 {
  color: rgba(0,0,0,1.00);
}

.IS3 {
  font-family: GillSansMTStd-Medium;
  font-size: 12;
  line-height: 12;
  flex: 1;
  font-weight: 400;
  letter-spacing: 1.2;
  margin-left: 5px;
  padding-top: 1;
  color: black;
}

.IS4 {
  align-items: flex-start;
  flex-direction: row;
  margin-top: -1;
  margin-bottom: 1;
}
</style>

<VideoLabel
  color="black"
  title=""
>
  <div
    className="S3"
  >
    <div
      className="S1"
    >
      <IconVideo
        fillColour="black"
        height={9}
      />
    </div>
    <div
      className="IS2 S2"
    >
      VIDEO
    </div>
  </div>
</VideoLabel>
`;
